--- a/css/sass/_video.scss
+++ b/css/sass/_video.scss
@@ -33,6 +33,9 @@
   }
 }
 .tna-amp {
+  .banner .button {
+    margin-bottom: 5px;
+  }
   .media-credits span {
     color: #bbb;
   }
